--- a/anomaly.Rmd
+++ b/anomaly.Rmd
@@ -9,8 +9,9 @@ It requires data extracted by "extraction"
 
 library(easyVerification)
 library(verification)
-library(dplyr)
+
 library(plyr)
+library(dplyr)
 library(foreach)
 library(iterators)
 library(parallel)
@@ -27,16 +28,12 @@ Some are set here and can therefore be modified by user
 
                                      ### SELECTED PARAMETERS (to be set by user) ###
 
-# selected project and directories
-selected_project <- "stics" # stics or season or tree
-dir_data <- paste0("D:/HOME/ekamir/scoring_medscope/data/",selected_project) 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+# selecting project
+selected_project <- "season" # stics or season or tree
+# directories and cores
+setup(project = selected_project, no_cores = 6)
 
-# number of cores
-no_core <- 6
-
-
-                                      ### LOADED PARAMETERS (permanent) ###
+                                      ### METADATA ###
 
 
 # loading number of bootstrap interations
@@ -61,9 +58,9 @@ nan <- length(an) # number of years
 
 ```
 
-## Loading files
+## Loading files and compute anomalies
 
-We load values extracted in "extraction" and compute their cross validated anomalies
+We load values extracted in "extraction" and compute their cross validated anomalies, for reference and ps only
 
 ```{r, echo=FALSE}
 
@@ -75,24 +72,18 @@ for (indicateur in indicateurs){
   temporalite <- time_scale[d] # select corresponding time dimension: single or multi
   agreg <- agreg_type[d] # select corresponding time aggregation type: sum or mean
 
- # parallelizing extraction on bootstrap iterations
-    
 cl <- makeCluster(no_core) # setting up number of cores
 registerDoParallel(cl) # parallelizing on them
-
 foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # for-loop parallelized
   
   # loading reference and ps data
   nom_ref <- paste0(indicateur,b,"_ref_uerra5.RData")
   nom_prev <- paste0(indicateur,b,"_prev_uerra5.RData")
   nom_clim <- paste0(indicateur,b,"_clim_uerra5.RData")
-
   load(file = file.path(dir_data, "extract", nom_ref))
   load(file = file.path(dir_data, "extract", nom_prev))
   load(file = file.path(dir_data, "extract", nom_clim))
-
   ngrids <- dim(array_obs)[1] # trick to automatically get number of grids
-
   
   # time aggregation if the time dimension is "multi" 
   
@@ -117,12 +108,10 @@ foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # for-loop parallelized
   prev_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
   clim_anomaly <- array(NA,dim=c(ngrids,nan,nrun))
   obs_anomaly <- array(NA,dim=c(ngrids,nan))
-
   for (y in 1:nan){ # each year we compute crossed mean (excluding ongoing year) and compute the difference with ongoing year value
     cv_mean_prev <- apply(prev_seas[,-y,], c(1,3), mean)
     cv_mean_clim <- apply(clim_seas[,-y,], c(1,3), mean)
     cv_mean_obs <- apply(ref_seas[,-y], 1, mean)
-
     prev_anomaly[,y,] <- prev_seas[,y,]-cv_mean_prev
     clim_anomaly[,y,] <- clim_seas[,y,]-cv_mean_clim
     obs_anomaly[,y] <- ref_seas[,y]-cv_mean_obs
@@ -130,10 +119,9 @@ foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # for-loop parallelized
   }
   
   # file naming 
-  nom_prev <- paste0(indicateur,b,"_anomaly_prev_uerra5.RData")
-  nom_clim <- paste0(indicateur,b,"_anomaly_clim_uerra5.RData")
-  nom_obs <- paste0(indicateur,b,"_anomaly_obs_uerra5.RData")
-  
+  nom_prev <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_prev.RData")
+  nom_clim <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_clim.RData")
+  nom_obs <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_obs.RData")
   # file saving 
   save(prev_anomaly, file = file.path(dir_data, "extract", nom_prev))
   save(clim_anomaly, file = file.path(dir_data, "extract", nom_clim))
@@ -143,7 +131,6 @@ foreach(b=1:nboot, .packages="tidyverse") %dopar%  { # for-loop parallelized
 stopCluster(cl) # stop parallelizing
 
 }
-
 tictoc::toc() # stop timer
 
 ```
