--- a/map_acc.Rmd
+++ b/map_acc.Rmd
@@ -31,22 +31,24 @@ library(ggnewscale)
 Some are loaded (because they remain permanent through codes)
 Some are set here and can therefore be modified by user
 
-```{r setup, include=FALSE}
+```{r}
 
                                      ### SELECTED PARAMETERS (to be set by user) ###
 
-# selected project and directories
-selected_project <- "stics" # stics or season or tree
-dir_data <- paste0("D:/HOME/ekamir/scoring_medscope/data/",selected_project) 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+# selecting project
+selected_project <- "tree" # stics or season or tree
+# directories and cores
+setup(project = selected_project, no_cores = 6)
 
 # selecting variable of interest
 load(file = file.path(dir_data, "extract", "indicateurs.RData"))
-indicateur <- indicateurs[3]
+nindicateur=3
+indicateur <- indicateurs[nindicateur]
 
-# time integration
-scale <- " MJJASO"
-
+# selecting scores from climato or ps
+climat_select <- "ps" # ps or clim
+climat_vect <- c("ps","clim")
+index_clima <- which(climat_vect==climat_select)
 # score value interval: to be modified, especially if all grids are black, it means they're out of range
 acc_limits <- c(-1,1)
 
@@ -61,11 +63,18 @@ sign_palette <- c("black", "black")
 
                                       ### LOADED PARAMETERS (permanent) ###
 
+# loading time scales and agregation type
+load(file = file.path(dir_data, "extract", "temporalite.RData")) # is there a time dimension
+load(file = file.path(dir_data, "extract", "time_window.RData")) # if yes which window is selected
+load(file = file.path(dir_data, "extract", "agregation.RData")) # if yes what type of aggregation should be applied
 
 # trick to get automatically number of grids 
 nom_ref <- paste0(indicateur,1,"_ref_uerra5.RData")
 load(file = file.path(dir_data, "extract", nom_ref))
 ngrids <- dim(array_obs)[1]
+
+# loading number of bootstrap interations
+load(file = file.path(dir_data, "extract", "nboot.RData"))
 
 # grid size (depending on the zoom)
 if (selected_project=="season"|selected_project=="tree"){
@@ -75,12 +84,10 @@ if (selected_project=="season"|selected_project=="tree"){
 }
 
 # background map
-key = "AIzaSyCD2-pP0yfM8aC8sjCB4g--CaCcExP6NhU"; "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA"
-register_google(key = "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA")
 if (selected_project=="season"|selected_project=="tree"){
-    back_map <- get_map(location = c(1.2, 41, 10, 46), maptype = "satellite", source = "google") 
+    back_map <- get_map(location = c(1.2, 41, 10, 46), maptype = "satellite", source = "osm") 
 } else if (selected_project=="stics"){
-    back_map <- get_map(location = c(4, 43.1, 5.7, 44), maptype = "satellite", source = "google") 
+    back_map <- get_map(location = c(4, 43.1, 5.7, 44), maptype = "satellite", source = "osm") 
 }
 
 ```
@@ -93,19 +100,26 @@ Significance is computed using Wilcoxon's test (H0: mean acc value not above 0.3
 
 ```{r }
 
+for (indicateur in indicateurs){
+
                 # BUIDLING SHAPEFILE OF MEAN ACC VALUES AND THEIR SIGNIFICANCE #
+
+d <- which(indicateurs==indicateur)
+temporalite <- time_scale[d] # select corresponding time dimension: single or multi
+agreg <- agreg_type[d] # select corresponding time aggregation type: sum or mean
 
   # extracting bootstrapped acc values
 
 # setting up arrays for all bootstrapped scores to be stored in
 
-score_ps <- array(NA, dim=c(ngrids, 3, nboot)) 
+score_ps <- array(NA, dim=c(ngrids, 4, nboot)) 
 
 # loading data and filling up the array just set
-  for (b in 1:nboot)  { 
+  for (b in 1:nboot)  {
+    print(b)
   
-    nom_det <- paste0(indicateur, b,"scoredet_grid_uerra5.RData")
-    load(file = file.path(dir_data, "score", nom_det))
+    nom_det <- paste0(indicateur, b,scalename(selected_project,temporalite,agreg),"_scoredet_grid.RData")
+    load(file = file.path(dir_scores,  nom_det))
 
     score_ps[,,b] <- score_det[,]
   }
@@ -126,13 +140,13 @@ matrix4shp[,4] <- lon
     # mean skill and wilcoxon test outcome
 
 matrix4shp[,2] <- rep(0, ngrids) # signficance: 0 everywhere first, will switch to 1 if positive statistical test outcome
-matrix4shp[,1] <- apply(score_ps[,1,], 1, mean, na.rm = TRUE) #  mean of bootstrapped ACC  
+matrix4shp[,1] <- apply(score_ps[,index_clima,], 1, mean, na.rm = TRUE) #  mean of bootstrapped ACC (ps or climato)
 
     # Wilcoxon test
 
 for (i in 1:ngrids)  { 
-  if (length(which(is.na(score_ps[i,1,]))) >= na_limit) {matrix4shp[i,2] <- 0; matrix4shp[i,1] <- NA}
-  else { wacc <- wilcox.test(score_ps[i,1,], mu = 0.3, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0.3" & "alternative = greater", alternative being h1
+  if (length(which(is.na(score_ps[i,index_clima,]))) >= na_limit) {matrix4shp[i,2] <- 0; matrix4shp[i,1] <- NA}
+  else { wacc <- wilcox.test(score_ps[i,index_clima,], mu = 0.3, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0.3" & "alternative = greater", alternative being h1
 
     if (wacc$p.value < 0.05) { # p value de 5%
     matrix4shp[i,2] <- 1 # 1 = test validé, 0 = non validé (voir plus haut)
@@ -153,8 +167,9 @@ shp_grid$significance[which(shp_grid$significance==0)] <- NA # to help plotting,
 
                                       # MAPPING WITH GGPLOT2 #
 
+pdf(paste0(dir_plot,"/acc_",indicateur,scalename(selected_project,temporalite,agreg),climat_select,".pdf"))
 
-ggmap(back_map) +
+p<-ggmap(back_map) +
 geom_sf(data = shp_grid, aes(color = acc), size=grid_size, shape = 15) + 
   scale_color_gradientn(colours=score_palette, limits = acc_limits, na.value = "black", guide = guide_colorbar(barwidth = 10, barheight = 0.5, nbin = 5)) +
 new_scale("color")+
@@ -162,6 +177,13 @@ geom_sf(data = shp_grid, aes(color = significance), shape = 3, size = 0.15, show
   scale_color_gradientn(colours=sign_palette, na.value = "transparent")+
 theme(legend.direction = "horizontal", legend.position = "right", legend.title = element_text(),  
       plot.title = element_text(size = 12, hjust = 0, vjust = 1.5)) + 
-  labs(title = paste0(indicateur,scale," acc "))
+  labs(title = paste0(indicateur,scalename(selected_project,temporalite,agreg),"ACC_", climat_select))
+
+print(p)
+
+dev.off()
+
+}
 
 ```
+
