--- a/map_rmse.Rmd
+++ b/map_rmse.Rmd
@@ -35,17 +35,20 @@ Some are set here and can therefore be modified by user
 
                                      ### SELECTED PARAMETERS (to be set by user) ###
 
-# selected project and directories
+# selecting project
 selected_project <- "season" # stics or season or tree
-dir_data <- paste0("D:/HOME/ekamir/scoring_medscope/data/",selected_project) 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+# directories and cores
+setup(project = selected_project, no_cores = 6)
+
+# selecting scores from climato or ps
+climat_select <- "ps" # ps or clim <<<<<<<<<<<<<<<
+climat_vect <- c("ps","clim")
+index_clima <- which(climat_vect==climat_select)+2
 
 # selecting variable of interest
 load(file = file.path(dir_data, "extract", "indicateurs.RData"))
-indicateur <- indicateurs[3]
-
-# time integration
-scale <- " MJJASO"
+nindicateur=1
+indicateur <- indicateurs[nindicateur]
 
 # error limit
 na_limit <- 10
@@ -56,8 +59,12 @@ score_palette <- c("white", "#fee5d9", "#fcbba1", "#fc9272", "#fb6a4a", "#e31a1c
 # !! DO NOT MODIFY !! one color palette for signifiance plotting  
 sign_palette <- c("black", "black")
 
-                                      ### LOADED PARAMETERS (permanent) ###
+                                      ### METADATA ###
 
+# loading time scales and agregation type
+load(file = file.path(dir_data, "extract", "temporalite.RData")) # is there a time dimension
+load(file = file.path(dir_data, "extract", "time_window.RData")) # if yes which window is selected
+load(file = file.path(dir_data, "extract", "agregation.RData")) # if yes what type of aggregation should be applied
 
 # trick to get automatically number of grids 
 nom_ref <- paste0(indicateur,1,"_ref_uerra5.RData")
@@ -72,12 +79,10 @@ if (selected_project=="season"|selected_project=="tree"){
 }
 
 # background map
-key = "AIzaSyCD2-pP0yfM8aC8sjCB4g--CaCcExP6NhU"; "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA"
-register_google(key = "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA")
 if (selected_project=="season"|selected_project=="tree"){
-    back_map <- get_map(location = c(1.2, 41, 10, 46), maptype = "satellite", source = "google") 
+    back_map <- get_map(location = c(1.2, 41, 10, 46), maptype = "satellite", source = "osm") 
 } else if (selected_project=="stics"){
-    back_map <- get_map(location = c(4, 43.1, 5.7, 44), maptype = "satellite", source = "google") 
+    back_map <- get_map(location = c(4, 43.1, 5.7, 44), maptype = "satellite", source = "osm") 
 }
 
 ```
@@ -90,17 +95,23 @@ Significance is computed using Wilcoxon's test (H0: mean (rmse ps - remse clim) 
 
 ```{r }
 
+for (indicateur in indicateurs){
+
                 # BUIDLING SHAPEFILE OF MEAN RMSE VALUES AND THE SIGNIFICANCE OF RMSE(ps)-RMSE(clim) #
+
+d <- which(indicateurs==indicateur)
+temporalite <- time_scale[d] # select corresponding time dimension: single or multi
+agreg <- agreg_type[d] # select corresponding time aggregation type: sum or mean
 
   ## extracting bootstrapped rmse values
 # setting up arrays for all bootstrapped scores to be stored in
-score_ps <- array(NA, dim=c(ngrids, 3, nboot)) 
+score_ps <- array(NA, dim=c(ngrids, 4, nboot)) 
 
 # loading data and filling up the array just set
   for (b in 1:nboot)  { 
   
-    nom_det <- paste0(indicateur, b,"scoredet_grid_uerra5.RData")
-    load(file = file.path(dir_data, "score", nom_det))
+    nom_det <- paste0(indicateur, b,scalename(selected_project,temporalite,agreg),"_scoredet_grid.RData")
+    load(file = file.path(dir_scores, nom_det))
 
     score_ps[,,b] <- score_det[,]
 
@@ -125,8 +136,8 @@ matrix4shp[,1] <- apply(score_ps[,2,], 1, mean, na.rm = TRUE) #  mean of bootstr
     # Wilcoxon test
 
 for (i in 1:ngrids)  { 
-  if (length(which(is.na(score_ps[i,2,]))) >= na_limit) {matrix4shp[i,2] <- 0; matrix4shp[i,1] <- NA}
-  else {wmsess <- wilcox.test(score_ps[i,3,]-score_ps[i,2,], mu = 0, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0" & "alternative = greater", alternative being h1. We assess RMSE ps > RMSE clim
+  if (length(which(is.na(score_ps[i,index_clima,]))) >= na_limit) {matrix4shp[i,2] <- 0; matrix4shp[i,1] <- NA}
+  else {wmsess <- wilcox.test(score_ps[i,4,]-score_ps[i,3,], mu = 0, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0" & "alternative = greater", alternative being h1. We assess RMSE ps > RMSE clim
 
     if (wmsess$p.value < 0.05) { # p value 5%
       matrix4shp[i,2] <- 1 # 1 = test validé, 0 = non validé (voir plus haut)
@@ -145,8 +156,9 @@ shp_grid$significance[which(shp_grid$significance==0)] <- NA # to help plotting,
 
 
                                       # MAPPING WITH GGPLOT2 #
+pdf(paste0(dir_plot,"/rmse_",indicateur,scalename(selected_project,temporalite,agreg),climat_select,".pdf"))
 
-ggmap(back_map) +
+p<-ggmap(back_map) +
 geom_sf(data = shp_grid, aes(color = rmse), size=grid_size, shape = 15) + 
   scale_color_gradientn(colours=score_palette,  na.value = "black", guide = guide_colorbar(barwidth = 10, barheight = 0.5, nbin = 5)) + 
 new_scale("color")+
@@ -154,6 +166,11 @@ geom_sf(data = shp_grid, aes(color = significance), shape = 3, size = 0.15, show
   scale_color_gradientn(colours=sign_palette, na.value = "transparent")+
 theme(legend.direction = "horizontal", legend.position = "right", legend.title = element_text(),  
       plot.title = element_text(size = 12, hjust = 0, vjust = 1.5)) + 
-  labs(title = paste0(indicateur,scale," RMSE "))
+  labs(title = paste0(indicateur,scalename(selected_project,temporalite,agreg),"RMSE_",climat_select))
+print(p)
+
+dev.off()
+
+}
 
 ```
