--- a/score_determinist.Rmd
+++ b/score_determinist.Rmd
@@ -2,14 +2,14 @@
 title: "Deterministic scores"
 output: html_document
 ---
-The code aims at computing deterministic scores, being Anomaly Correlation Coefficient, and Root Mean Square Error, for ps and climato.
+The code aims at computing deterministic scores, being Anomaly Correlation Coefficient, and Root Mean Square Error, for ps (and climato for rmse only).
 ACC requires anomaly arrays, computed in "anomaly" 
 
 ```{r setup, include=FALSE}
 
-library(dplyr)
 library(tidyverse)
 library(plyr)
+library(dplyr)
 library(easyVerification)
 library(verification)
 library(foreach)
@@ -29,16 +29,13 @@ Some are set here and can therefore be modified by user
 
                                      ### SELECTED PARAMETERS (to be set by user) ###
 
-# selected project and directories
-selected_project <- "stics" # stics or season or tree
-dir_data <- paste0("D:/HOME/ekamir/scoring_medscope/data/",selected_project) 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
-
-# number of cores
-no_core <- 6
+# selecting project
+selected_project <- "season" # stics or season or tree
+# directories and cores
+setup(project = selected_project, no_cores = 6)
 
 
-                                      ### LOADED PARAMETERS (permanent) ###
+                                      ### METADATA ###
 
 
 # loading number of bootstrap interations
@@ -52,6 +49,9 @@ load(file = file.path(dir_data, "extract", "time_window.RData")) # if yes which 
 load(file = file.path(dir_data, "extract", "agregation.RData")) # if yes what type of aggregation should be applied
 
 ntemp <- length(temp) # number of elements in time dimension
+
+
+
 
 # loading ensemble members
 load(file = file.path(dir_data, "extract", "runs.RData"))
@@ -68,9 +68,7 @@ nan <- length(an) # number of years
 Scores computed for each grid separately, using "EasyVerification" package
 
 ```{r}
-
 tictoc::tic() # start timer
-
 acc_ps <- vector()
 acc_clim <- vector()
 rmse_ps <- vector()
@@ -81,29 +79,25 @@ for (indicateur in indicateurs){
   d <- which(indicateurs==indicateur)
   temporalite <- time_scale[d] # select corresponding time dimension: single or multi
   agreg <- agreg_type[d] # select corresponding time aggregation type: sum or mean
-
+  
  # parallelizing extraction on bootstrap iterations
-    
 cl <- makeCluster(no_core) # setting up number of cores
 registerDoParallel(cl) # parallelizing on them
-
   foreach(b=1:nboot, .packages=c('easyVerification', 's2dverification')) %dopar%  { # for-loop parallelized
-
       # loading reference ps and clim data and anomaly
-
-    nom_ref <- paste0(indicateur,b,"_ref_uerra5.RData")
-    nom_prev <- paste0(indicateur,b,"_prev_uerra5.RData")
-    nom_clim <- paste0(indicateur,b,"_clim_uerra5.RData")
-    nom_an_prev <- paste0(indicateur,b,"_anomaly_prev_uerra5.RData")
-    nom_an_clim <- paste0(indicateur,b,"_anomaly_clim_uerra5.RData")
-    nom_an_obs <- paste0(indicateur,b,"_anomaly_obs_uerra5.RData")
-    
-    load(file = file.path(dir_data, "extract", nom_ref))
-    load(file = file.path(dir_data, "extract", nom_prev))
-    load(file = file.path(dir_data, "extract", nom_clim))
-    load(file = file.path(dir_data, "extract", nom_an_prev))
-    load(file = file.path(dir_data, "extract", nom_an_clim))
-    load(file = file.path(dir_data, "extract", nom_an_obs))
+  nom_ref <- paste0(indicateur,b,"_ref_uerra5.RData")
+  nom_prev <- paste0(indicateur,b,"_prev_uerra5.RData")
+  nom_clim <- paste0(indicateur,b,"_clim_uerra5.RData")
+  nom_an_prev <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_prev.RData")
+  nom_an_clim <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_clim.RData")
+  nom_an_obs <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_obs.RData")
+  
+  load(file = file.path(dir_data, "extract", nom_ref))
+  load(file = file.path(dir_data, "extract", nom_prev))
+  load(file = file.path(dir_data, "extract", nom_clim))
+  load(file = file.path(dir_data, "extract", nom_an_prev))
+  load(file = file.path(dir_data, "extract", nom_an_clim))
+  load(file = file.path(dir_data, "extract", nom_an_obs))
     
     ngrids <- dim(array_obs)[1]
     # setting up array for scores to be stored in
@@ -127,7 +121,6 @@ registerDoParallel(cl) # parallelizing on them
     
     }
     
-    
       # RMSE #
  
     rmse_ps <- veriApply("EnsRmse", fcst=prev_seas, obs=ref_seas, parallel = TRUE)
@@ -141,25 +134,24 @@ registerDoParallel(cl) # parallelizing on them
     # storing scores
     score_det <- array(c(acc_ps, acc_clim, rmse_ps, rmse_clim), dim=c(ngrids,4))
     # file naming 
-    nom_det <- paste0(indicateur, b,"scoredet_grid_uerra5.RData")
+    nom_det <- paste0(indicateur, b,scalename(selected_project,temporalite,agreg),"_scoredet_grid.RData")
+ 
     # file saving 
-    save(score_det, file = file.path(dir_data, "score", nom_det))
+    save(score_det, file = file.path(dir_scores, nom_det))
   
-
 }
 stopCluster(cl) # stop parallelizing
 
 }
+
 tictoc::toc()# stop timer
-
-
 
 ```
 
   
 ## Box aggregated scores
                                             
-It computes ACC and RMSE score at box level, by averaging grid scores with latitude weighting
+It computes ACC and RMSE score at box level, by averaging grid scores with latitude weighting.It also computes statistical tests on scores.
 
 ```{r}
 
@@ -169,35 +161,36 @@ coeff_psacc <- vector()
 coeff_climacc <- vector()
 
 for (indicateur in indicateurs) {
+  
+  d <- which(indicateurs==indicateur)
+  temporalite <- time_scale[d] # select corresponding time dimension: single or multi
+  agreg <- agreg_type[d] # select corresponding time aggregation type: sum or mean
 
   # loading latitude
   load(file = file.path(dir_data, "extract", paste0(indicateur, "_lat.RData")))
-
   det_boot <- data.frame()
-
   for(b in 1:nboot) {
     
     # loading 
     nom_ref <- paste0(indicateur,b,"_ref_uerra5.RData")
     nom_prev <- paste0(indicateur,b,"_prev_uerra5.RData")
     nom_clim <- paste0(indicateur,b,"_clim_uerra5.RData")
-    nom_an_prev <- paste0(indicateur,b,"_anomaly_prev_uerra5.RData")
-    nom_an_clim <- paste0(indicateur,b,"_anomaly_clim_uerra5.RData")
-    nom_an_obs <- paste0(indicateur,b,"_anomaly_obs_uerra5.RData")
-    
+    nom_an_prev <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_prev.RData")
+    nom_an_clim <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_clim.RData")
+    nom_an_obs <- paste0(indicateur,b,scalename(selected_project,temporalite,agreg),"anomaly_obs.RData")
     load(file = file.path(dir_data, "extract", nom_ref))
     load(file = file.path(dir_data, "extract", nom_prev))
     load(file = file.path(dir_data, "extract", nom_clim))
     load(file = file.path(dir_data, "extract", nom_an_prev))
     load(file = file.path(dir_data, "extract", nom_an_clim))
     load(file = file.path(dir_data, "extract", nom_an_obs))
-
-
+    
   # time aggregation if the time dimension is "multi" 
   if (temporalite=="single"){
     prev_seas <- array_prev 
     clim_seas <- array_clim
     ref_seas <- array_obs
+    
   } else if (temporalite=="multi") {
     if (agreg=="sum"){
       prev_seas <- apply(array_prev[,,,temp], c(1,2,3), sum) 
@@ -222,39 +215,30 @@ for (indicateur in indicateurs) {
     det_boot[b,3] <-  RMSE_boite(prev_seas, ref_seas, lat)# RMSE prevision
     det_boot[b,4] <-  RMSE_boite(clim_seas, ref_seas, lat)# RMSE climato
   }
+  
+  # statistical tests
+  
+    acc_ps <- wilcox.test(det_boot[,1], mu = 0.3, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value # ACC MF6 > 0.3 ?
+    acc_clim <- wilcox.test(det_boot[,2], mu = 0.3, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value # ACC clim > 0.3?
+    rmse_ps <- wilcox.test(det_boot[,3]-det_boot[,4], mu = 0, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value # RMSE ps < RMSE clim ?
+
     # naming and saving files
       # list of bootstrapped values (for statistical tests)
-    nom_bootseas <- paste0(indicateur, "scoredet_boot_uerra5.csv")
-    save(det_boot, file = file.path(dir_data, "score", nom_bootseas))
+    if (temporalite=="single"){
+    nom_bootseas <- paste0(indicateur, temporalite,"_scoredet_boot_uerra5.csv")
+    }else if (temporalite=="multi"){
+    nom_bootseas <- paste0(indicateur,temporalite,"-",temp[1],"-",temp[length(temp)],"-","_scoredet_boot.RData")
+    }
+    save(det_boot, file = file.path(dir_scores, nom_bootseas))
     
       # csv of bootstrap mean values
-    det_meanboot <- apply(det_boot, 2, mean, na.rm=T)
-    nom_meanseas <- paste0(indicateur, "detbox_meanboot_uerra5.csv")
-    write_csv(as.data.frame(det_meanboot), file.path(dir_data, "score", nom_meanseas))
+    det_meanboot <- apply(det_boot, 2, mean, na.rm=T) # mean of scores
+    det_meanboot$stat_test <- c(acc_ps,acc_clim, rmse_ps, NA) # statistical test outcomes
+    nom_meanseas <- paste0(indicateur,scalename(selected_project,temporalite,agreg), "detbox_meanboot.csv")
 
+    write_csv(as.data.frame(det_meanboot), file.path(dir_scores, nom_meanseas))
 }
 
 ```
 
-[ optional ]
 
-## Box score significance test
-
-Optional and manual: wilcoxon statistical tests
-Wilcoxon test with H0: ACC not above 0.3 / RMSE(ps)-RMSE(clim) not above 0
-
-```{r}
-
-indicateur <- 2
-
-   # season
-  nom_bootseas <- paste0(indicateur, "scoredet_boot_uerra5.csv")
-  load(file = file.path(dir_data, "score", nom_bootseas))
-
-  boxboot <- array(unlist(det_boot) , c(3,nboot))
-  
-  wilcox.test(boxboot[1,], mu = 0.3, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value # ACC
-  wilcox.test(boxboot[2,]-boxboot[3,], mu = 0, alternative = "greater", conf.level = 0.95, na.action = na.omit)$p.value # comparison RMSE ps and clim
-
-
-```
